Tester ut en ny organisering av filer

--- a/template.tex
+++ b/template.tex
@@ -1017,7 +1017,7 @@ i Please use `linewidth` instead.
 
 \subsection{Forklaringsbokser}\label{forklaringsbokser}
 
-\begin{tcolorbox}[enhanced jigsaw, coltitle=black, left=2mm, leftrule=.75mm, toptitle=1mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, colback=white, bottomrule=.15mm, opacityback=0, rightrule=.15mm, breakable, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Forklaringsboks}, bottomtitle=1mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, toprule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, colbacktitle=quarto-callout-note-color!10!white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Forklaringsboks}, colframe=quarto-callout-note-color-frame, opacityback=0, rightrule=.15mm, bottomrule=.15mm, arc=.35mm, coltitle=black, titlerule=0mm, bottomtitle=1mm, colback=white, left=2mm, leftrule=.75mm, toptitle=1mm, breakable, toprule=.15mm, opacitybacktitle=0.6]
 
 Forklaringsboks er nyttig for oppsummere et fenomen.
 
